Crash in [@ mozilla::layers::DIGroup::ClearImageKey]
Categories
(Core :: Graphics: WebRender, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox-esr68 | --- | unaffected |
firefox67 | --- | unaffected |
firefox68 | --- | unaffected |
firefox69 | --- | unaffected |
firefox70 | --- | unaffected |
firefox71 | blocking | fixed |
People
(Reporter: marcia, Assigned: jrmuizel)
Details
(Keywords: crash, regression, Whiteboard: [rca: coding error])
Crash Data
Attachments
(1 file)
This bug is for crash report bp-a7d555f2-d910-4dad-bf47-75a380191008.
Seen while looking at nightly crash stats - crashes started in 20191008093420: https://bit.ly/322QIbm. 21 crashes/8 installs so far, Windows and Linux.
Possible regression range based on build id: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=3955e0a93047dec7ae5aebba4143aa61feed56ee&tochange=035f52aed4427b22facfa883067e298f10ef9e97
All the URLs are netflix. MOZ_RELEASE_ASSERT(aForce || mInvalidRect.IsEmpty()
Top 10 frames of crashing thread:
0 xul.dll void mozilla::layers::DIGroup::ClearImageKey gfx/layers/wr/WebRenderCommandBuilder.cpp:348
1 xul.dll void mozilla::layers::WebRenderCommandBuilder::DoGroupingForDisplayList gfx/layers/wr/WebRenderCommandBuilder.cpp:1512
2 xul.dll mozilla::layers::WebRenderCommandBuilder::CreateWebRenderCommandsFromDisplayList gfx/layers/wr/WebRenderCommandBuilder.cpp:1677
3 xul.dll bool nsDisplaySVGWrapper::CreateWebRenderCommands layout/painting/nsDisplayList.cpp:6277
4 xul.dll mozilla::layers::WebRenderCommandBuilder::CreateWebRenderCommandsFromDisplayList gfx/layers/wr/WebRenderCommandBuilder.cpp:1771
5 xul.dll bool nsDisplayTransform::CreateWebRenderCommands layout/painting/nsDisplayList.cpp:8658
6 xul.dll mozilla::layers::WebRenderCommandBuilder::CreateWebRenderCommandsFromDisplayList gfx/layers/wr/WebRenderCommandBuilder.cpp:1771
7 xul.dll bool nsDisplayTransform::CreateWebRenderCommands layout/painting/nsDisplayList.cpp:8658
8 xul.dll mozilla::layers::WebRenderCommandBuilder::CreateWebRenderCommandsFromDisplayList gfx/layers/wr/WebRenderCommandBuilder.cpp:1771
9 xul.dll bool nsDisplayTransform::CreateWebRenderCommands layout/painting/nsDisplayList.cpp:8658
Reporter | ||
Comment 1•6 years ago
|
||
Adding the macOS specific signatures which also spiked in the same buildID.
Comment 2•6 years ago
|
||
That's a lot of crashes for Nightly, marked as blocking the release.
Assignee | ||
Comment 4•6 years ago
|
||
Yep. I have a decent idea of the cause.
Assignee | ||
Comment 5•6 years ago
|
||
In the future mInvalidRect and some other state should move out of DIGroup
and into a non-persistant struct that's only used during Group building.
This will allow us to completely avoid errors like this.
Updated•6 years ago
|
Comment 7•6 years ago
|
||
bugherder |
Updated•6 years ago
|
This bug has been identified as part of a pilot on determining root causes of blocking and dot release drivers.
It needs a root-cause set for it. Please see the list at https://docs.google.com/document/d/1FFEGsmoU8T0N8R9kk-MXWptOPtXXXRRIe4vQo3_HgMw/.
Add the root cause as a whiteboard
tag in the form [rca - <cause> ]
and remove the rca-needed
keyword.
If you have questions, please contact :tmaity.
Assignee | ||
Updated•6 years ago
|
Description
•