Bug 1587210. Always clear mInvalidRect. r=mstange

In the future mInvalidRect and some other state should move out of DIGroup
and into a non-persistant struct that's only used during Group building.
This will allow us to completely avoid errors like this.

Differential Revision: https://phabricator.services.mozilla.com/D48706